# SuperTalabat

./: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp  player.cpp  player.h  resource.qrc
